// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should filter out style props that are not allowed 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  border-width: 2px;
  border-color: rgb(225,227,234);
  border-style: solid;
  border-radius: 4px;
  padding: 1.25rem;
  background-color: rgb(255,255,255);
}

<div
  className="emotion-1"
>
  <article
    className="emotion-0"
  />
</div>
`;

exports[`Card should render children 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  border-width: 2px;
  border-color: rgb(225,227,234);
  border-style: solid;
  border-radius: 4px;
  padding: 1.25rem;
  background-color: rgb(255,255,255);
}

<div
  className="emotion-1"
>
  <article
    className="emotion-0"
  >
    I AM A JEDI!!!!
  </article>
</div>
`;

exports[`Card should render default values 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  border-width: 2px;
  border-color: rgb(225,227,234);
  border-style: solid;
  border-radius: 4px;
  padding: 1.25rem;
  background-color: rgb(255,255,255);
}

<div
  className="emotion-1"
>
  <article
    className="emotion-0"
  />
</div>
`;

exports[`Card should render default values unless overridden by the component 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  box-sizing: border-box;
  border-width: 2px;
  border-color: rgb(225,227,234);
  border-style: solid;
  border-radius: 4px;
  padding: 1.25rem;
  padding-bottom: 4.75rem;
  background-color: rgb(255,255,255);
}

<div
  className="emotion-1"
>
  <article
    className="emotion-0"
  />
</div>
`;
